--- a/Lab2/Readme
+++ b/Lab2/Readme
@@ -1,4 +1,4 @@
-## Lab 2: Student Performance Dataset
+Lab 2: Student Performance Dataset
 
 Dataset: Student Performance Dataset  
 Source: UCI Machine Learning Repository  
